--- a/canvas_modules/harness/src/styles/App.css
+++ b/canvas_modules/harness/src/styles/App.css
@@ -14,7 +14,6 @@
 #canvas {
   height: 100%;
   width: 100%;
-  overflow: auto;
   padding-top: 60px;
 }
 
